Java 17 + Gradle 7.4.2 🚀