@@ -1,11 +1,9 @@
 subprojects {
     tasks {
-        // illegals-access is needed to access certain members via reflection when using JDK 16
         withType<JavaCompile> {
             options.fork(mapOf(Pair("jvmArgs", listOf(
                     "--add-opens",
-                    "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
-                    "--illegal-access=permit"
+                    "java.base/sun.nio.ch=ALL-UNNAMED",
             ))))
         }
 
@@ -13,8 +11,7 @@ subprojects {
             ignoreFailures = true // needed to continue tests after first failure occurs
             jvmArgs(listOf(
                     "--add-opens",
-                    "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
-                    "--illegal-access=permit"
+                    "java.base/sun.nio.ch=ALL-UNNAMED",
             ))
         }
     }
